--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "watchify": "^3.2.1"
   },
   "dependencies": {
-    "angular": "^1.3.15"
+    "angular": "^1.3.15",
+    "ng-autocomplete": "^1.0.0"
   }
 }
